Add tests for DeviceCertificateValidator
Also added test case illustrating a problem with Hono's protocol
adapters validating client certificates when running on Quarkus.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>